[package]
name = "plonky3-poseidon-hasher"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-poseidon = { git = "https://github.com/Plonky3/Plonky3.git", rev = "0743900095e327c3ae9b2b39807300d26258ccc4" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git", rev = "0743900095e327c3ae9b2b39807300d26258ccc4" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "0743900095e327c3ae9b2b39807300d26258ccc4" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "0743900095e327c3ae9b2b39807300d26258ccc4" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git", rev = "0743900095e327c3ae9b2b39807300d26258ccc4" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", rev = "0743900095e327c3ae9b2b39807300d26258ccc4" }
rand = "0.8.5"
